--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://semanticdata.github.io/zola-testing/"
+base_url = "https://miguelpimentel.do/zola-testing/"
 title = "Zola Testing Website"
 description = "This repo is used to test new web elements. It is an amalgamation of code snippets, all weaved together by Zola."
 compile_sass = true
