--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,12 @@ base_url = "https://miguelpimentel.do/zola-testing/"
 title = "Zola Testing Website"
 description = "This repo is used to test new web elements. It is an amalgamation of code snippets, all weaved together by Zola."
 compile_sass = true
+generate_feed = false
+minify_html = false
 build_search_index = false
+
 [markdown]
 highlight_code = false
+highlight_theme = "ayu-light"
+
 [extra]
