big layout update

--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,14 @@
 base_url = "https://miguelpimentel.do/zola-testing/"
-title = "Zola Testing Website"
+title = "Zola Testing"
 description = "This repo is used to test new web elements. It is an amalgamation of code snippets, all weaved together by Zola."
 compile_sass = true
 generate_feed = false
 minify_html = false
 build_search_index = false
+# taxonomies = [
+#   { name = "categories" },
+#   { name = "tags" }
+# ]
 
 [markdown]
 highlight_code = false
