--- a/config.toml
+++ b/config.toml
@@ -5,10 +5,10 @@ compile_sass = true
 generate_feed = false
 minify_html = false
 build_search_index = false
-# taxonomies = [
-#   { name = "categories" },
-#   { name = "tags" }
-# ]
+taxonomies = [
+  { name = "categories", feed = true },
+  { name = "tags", feed = true }
+]
 
 [markdown]
 highlight_code = false
