--- a/config.toml
+++ b/config.toml
@@ -20,5 +20,7 @@ sidebar = [
     { name = "Test", url = "test/" },
     { name = "Posts", url = "posts/" },
     { name = "Firefox", url = "posts/unlock-firefox-sidebar/" },
+    { name = "Tags", url = "tags/" },
+    { name = "#placeholder", url = "tags/placeholder/" },
   ] },
 ]
