--- a/config.toml
+++ b/config.toml
@@ -15,12 +15,10 @@ highlight_code = false
 highlight_theme = "ayu-light"
 
 [extra]
-# sidebar = [
-#   { name = "Links", urls = [
-#     { name = "Test", url = "test/" },
-#     { name = "Posts", url = "posts/" },
-#     { name = "Firefox", url = "posts/unlock-firefox-sidebar/" },
-#     { name = "Tags", url = "tags/" },
-#     { name = "#placeholder", url = "tags/placeholder/" },
-#   ] },
-# ]
+sidebar = [
+    { name = "Test", url = "test/" },
+    { name = "Posts", url = "posts/" },
+    { name = "Firefox", url = "posts/unlock-firefox-sidebar/" },
+    { name = "Tags", url = "tags/" },
+    { name = "#placeholder", url = "tags/placeholder/" },
+  ]
