--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,10 +1,11 @@
 name: Zola - Build and Deploy to GH Pages
 
 on:
+  # push:
+  #   branches:
+  #     - main
+  # pull_request:
   workflow_dispatch:
-  push:
-    branches:
-      - main
 
 permissions:
   contents: read
