--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -1,6 +1,9 @@
-name: Zola only Build
+name: Zola - Build only
 
 on:
+  # push:
+  #   branches:
+  #     - main
   pull_request:
   workflow_dispatch:
 
@@ -23,7 +26,7 @@ jobs:
     # if: github.ref != 'refs/heads/main'
     steps:
       - name: Checkout main
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Install Zola
         uses: taiki-e/install-action@zola
       - name: Build Zola
