--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://semanticdata.github.io/zola-sandbox/"
+base_url = "https://zola-sandbox.vercel.app/"
 title = "Zola Sandbox"
 description = "This repository is used to test new web elements. It is an amalgamation of code snippets, all weaved together by Zola."
 
