--- a/theme.toml
+++ b/theme.toml
@@ -3,7 +3,7 @@ description = "Sandbox is a theme for Zola."
 license = "MIT"
 homepage = "https://github.com/semanticdata/zola-sandbox"
 min_version = "0.18.0"
-demo = "https://semanticdata.github.io/zola-sandbox"
+demo = "https://zola-sandbox.vercel.app/"
 
 [author]
 name = "Miguel Pimentel"
