--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -2,10 +2,7 @@ name: Build and Deploy Zola site
 
 on:
   workflow_dispatch:
-  # pull_request:
-  push:
-    branches:
-      - main
+  push: { branches: ["main"] }
 
 permissions:
   contents: read
@@ -23,7 +20,9 @@ defaults:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # if: github.ref != 'refs/heads/main'
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -37,14 +36,6 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
