--- a/theme.toml
+++ b/theme.toml
@@ -1,9 +1,10 @@
 name = "Sandbox"
 description = "Sandbox is a theme for Zola."
 license = "MIT"
-homepage = "https://github.com/semanticdata/zola-sandbox"
+homepage = "https://github.com/salif/sandbox"
 min_version = "0.18.0"
-demo = "https://zola-sandbox.vercel.app/"
+demo = "https://salif.github.io/zola-themes-collection/demo/sandbox/"
+tags = ["Blog"]
 
 [author]
 name = "Miguel Pimentel"
